@@ -5,12 +5,12 @@ import static il.org.spartan.spartanizer.wrings.TrimmerTestsUtils.*;
 import org.junit.*;
 import org.junit.runners.*;
 
-/** Unit tests for {@link CastToLong2Multiply1L}
- * @author Niv Shalmon
- * @since 2016 */
-@FixMethodOrder(MethodSorters.NAME_ASCENDING) //
-@SuppressWarnings({ "static-method", "javadoc" }) //
-public final class Issue216 {
+/**
+ * Unit tests for  {@link CastToLong2Multiply1L}
+ * @author  Niv Shalmon
+ * @since  2016 
+ */
+@FixMethodOrder(MethodSorters.NAME_ASCENDING) @SuppressWarnings({ "static-method", "javadoc" }) public final class Issue216 {
   @Test public void issue216_01() {
     trimmingOf("(long)1.0").stays();
   }
@@ -32,9 +32,6 @@ public final class Issue216 {
   }
 
   @Test public void issue216_06() {
-    trimmingOf("(long)new Integer(5)")//
-        .gives("1L*new Integer(5)")//
-        .gives("1L*Integer.valueOf(5)")//
-        .stays();
+    trimmingOf("(long)new Integer(5)").gives("1L*new Integer(5)").gives("1L*Integer.valueOf(5)").stays();
   }
 }
